--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /MonTrash/nbproject/private/
 /Montrash_User/nbproject/private/
 /MonTrash_Cleaner/nbproject/private/
+/MonTrash_OneForAll/nbproject/private/
+/MonTrash_OneForAll/build/
