--- a/MonTrash_OneForAll/nbproject/project.properties
+++ b/MonTrash_OneForAll/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Montrash_User.jar
+dist.jar=${dist.dir}/MonTrash_OneForAll.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=montrash_user.Montrash_User
+main.class=montrash_oneforall.MonTrash_OneForAll
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
