--- a/MonTrash_OneForAll/nbproject/project.properties
+++ b/MonTrash_OneForAll/nbproject/project.properties
@@ -55,7 +55,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=montrash_oneforall.MonTrash_OneForAll
+main.class=montrash_oneforall.model.MonTrash_OneForAll
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
